# GoProSurf

./: .gitignore  .gitmodules  CMakeLists.txt  Detector.h  GoProSurf.ui  GpsInfo.h  QGoProFiles.h  QTWindow.h  QVersion.h  QWavesModel.h  README.md  Video.h  main.cpp
.github/workflows/: cmake.yml
